force-app/main/default/objects/Deal_Activity__c/Deal_Activity__c.object-meta.xml
<CustomObject>
    <label>Deal Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>