force-app/main/default/objects/Deal_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Call</fullName><default>false</default><label>Call</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Meeting</fullName><default>false</default><label>Meeting</label></value>
            <value><fullName>Demo</fullName><default>false</default><label>Demo</label></value>
            <value><fullName>Proposal Sent</fullName><default>false</default><label>Proposal Sent</label></value>
            <value><fullName>Follow-up</fullName><default>false</default><label>Follow-up</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>