force-app/main/default/objects/Deal_Activity__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Activities</relationshipName>
    <relationshipLabel>Deal Activities</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>