force-app/main/default/objects/Deal_Activity__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <type>MasterDetail</type>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Deal Activities</relationshipLabel>
    <relationshipName>Deal_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>