force-app/main/default/objects/Deal_Activity__c/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <label>Next Action</label>
    <type>Text</type>
    <length>255</length>
</CustomField>