force-app/main/default/objects/Deal_Activity__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Positive</fullName><default>false</default><label>Positive</label></value>
            <value><fullName>Neutral</fullName><default>false</default><label>Neutral</label></value>
            <value><fullName>Negative</fullName><default>false</default><label>Negative</label></value>
            <value><fullName>No Response</fullName><default>false</default><label>No Response</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>